force-app/main/default/objects/VG_Pricing__c/VG_Pricing__c.object-meta.xml
<CustomObject>
    <label>Pricing</label>
    <nameField>
        <label>Pricing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>