force-app/main/default/objects/VG_Pricing__c/fields/Sum_Insured_Limit__c.field-meta.xml
<CustomField>
    <fullName>Sum_Insured_Limit__c</fullName>
    <label>Sum Insured Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>