force-app/main/default/objects/VG_Pricing__c/fields/VG_Category__c.field-meta.xml
<CustomField>
    <fullName>VG_Category__c</fullName>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>