force-app/main/default/objects/VG_Pricing__c/fields/VG_Level__c.field-meta.xml
<CustomField>
    <fullName>VG_Level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Risk Detail</fullName>
            </value>
            <value>
                <fullName>Risk Rating</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>