force-app/main/default/objects/VG_Pricing__c/fields/VG_Order__c.field-meta.xml
<CustomField>
    <fullName>VG_Order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>