force-app/main/default/objects/VG_Pricing__c/fields/VG_Product__c.field-meta.xml
<CustomField>
    <fullName>VG_Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GLPL</fullName>
                <default>true</default>
                <label>GLPL</label>
            </value>
            <value>
                <fullName>Life Sciences</fullName>
            </value>
            <value>
                <fullName>Clinical Trials</fullName>
            </value>
            <value>
                <fullName>D&amp;O</fullName>
            </value>
            <value>
                <fullName>PI</fullName>
            </value>
            <value>
                <fullName>FIPI</fullName>
            </value>
            <value>
                <fullName>Crime</fullName>
            </value>
            <value>
                <fullName>Property</fullName>
            </value>
            <value>
                <fullName>CC - Liability GL/PL</fullName>
            </value>
            <value>
                <fullName>CC - Machinery BI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>