force-app/main/default/objects/VG_Pricing__c/fields/VG_Rate__c.field-meta.xml
<CustomField>
    <fullName>VG_Rate__c</fullName>
    <label>Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>