force-app/main/default/objects/VG_Pricing__c/fields/VG_Rating_Factor__c.field-meta.xml
<CustomField>
    <fullName>VG_Rating_Factor__c</fullName>
    <label>Rating Factor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>