force-app/main/default/objects/VG_Pricing__c/fields/VG_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>VG_Record_Type__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type</label>
    <type>Text</type>
</CustomField>