force-app/main/default/objects/VG_Pricing__c/recordTypes/VG_Nordics.recordType-meta.xml
<RecordType>
    <fullName>VG_Nordics</fullName>
    <active>true</active>
    <label>Bridge</label>
</RecordType>