force-app/main/default/objects/VG_Pricing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>VG_Category__c</columns>
    <columns>VG_Rating_Factor__c</columns>
    <columns>VG_Product__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>